[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Game_Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/GUI/UI_menu_button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/GUI/UI_menu_button_hovered.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/GUI/UI_menu_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Themes/menu_button_theme.tres" type="Theme" id=5]
[ext_resource path="res://Scenes/Other/Options.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Other/Controls.tscn" type="PackedScene" id=7]

[node name="Game_Menu" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.101961, 0.109804, 0.172549, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Button" type="TextureButton" parent="."]
pause_mode = 1
margin_left = 611.0
margin_top = 3.0
margin_right = 651.0
margin_bottom = 43.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 282.0
margin_top = 100.0
margin_right = 358.0
margin_bottom = 274.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume_Button" type="Button" parent="VBoxContainer"]
margin_right = 76.0
margin_bottom = 19.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls_Button" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 76.0
margin_bottom = 50.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Controls"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_Button" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 76.0
margin_bottom = 81.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Options"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry_Button" type="Button" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 76.0
margin_bottom = 112.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Retry"
flat = true

[node name="Quit_Title_Button" type="Button" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 76.0
margin_bottom = 143.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Exit to Title"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_Game_Button" type="Button" parent="VBoxContainer"]
margin_top = 155.0
margin_right = 76.0
margin_bottom = 174.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Quit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Controls" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="Menu_Button" to="." method="_on_Menu_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Resume_Button" to="." method="_on_Resume_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls_Button" to="." method="_on_Controls_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options_Button" to="." method="_on_Options_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Retry_Button" to="." method="_on_Retry_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Title_Button" to="." method="_on_Quit_Title_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Game_Button" to="." method="_on_Quit_Game_Button_pressed"]
